# raven

./: .gitignore  README.md
firmware/: .gitignore
firmware/Drivers/STM32G4xx_HAL_Driver/Inc/: stm32g4xx_hal_uart.h
firmware/motor-hub/: .mxproject  CMakeLists.txt  STM32G431CBUx_FLASH.ld  motor-hub.ioc
firmware/motor-hub/App/Inc/: app.h  com.h  comconfig.h  drv8874.h  encoder.h  parser.h  pid.h  servo.h  sipo.h
firmware/motor-hub/App/Src/: app.c  com.c  drv8874.c  encoder.c  parser.c  pid.c  servo.c  sipo.c
firmware/motor-hub/Core/Inc/: main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
firmware/motor-hub/Core/Src/: main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
firmware/motor-hub/cmake/: gcc-arm-none-eabi.cmake
firmware/motor-hub/cmake/stm32cubemx/: CMakeLists.txt
firmware/sensor-hub/: .mxproject  CMakeLists.txt  sensor-hub.ioc
firmware/sensor-hub/Core/Src/: main.c
firmware/sensor-hub/cmake/stm32cubemx/: CMakeLists.txt
pcb/: Symbols.bak  Symbols.kicad_sym  encoder.kicad_sch  imu.kicad_sch  large-motor.kicad_sch  light-sensor.kicad_sch  magnometer.kicad_sch  motor-hub.kicad_sch  photoresistor.kicad_sch  raven.kicad_pcb  raven.kicad_prl  raven.kicad_pro  raven.kicad_sch  sensor-hub.kicad_sch  servo.kicad_sch  switch.kicad_sch  sym-lib-table
pcb/3dmodels/: XT30UPB-M.STEP
pcb/Footprints.pretty/: DMP2002UPS.kicad_mod  L_0660A.kicad_mod  TPS548B28RWWR.kicad_mod  TS-1088.kicad_mod
pcb/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
